--- a/csv-validator-core/pom.xml
+++ b/csv-validator-core/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../csv-validator-parent</relativePath>
     </parent>
 
-    <artifactId>csv-validator-core</artifactId>
+    <artifactId>csv-validator-core_${scala.version}</artifactId>
     <packaging>jar</packaging>
 
     <name>csv-validator-core</name>
