--- a/csv-validator-java-api/pom.xml
+++ b/csv-validator-java-api/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../csv-validator-parent</relativePath>
     </parent>
 
-    <artifactId>csv-validator-java-api</artifactId>
+    <artifactId>csv-validator-java-api_${scala.version}</artifactId>
     <packaging>jar</packaging>
 
     <name>csv-validator-java-api</name>
@@ -133,7 +133,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>csv-validator-core</artifactId>
+            <artifactId>csv-validator-core_${scala.version}</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
