Upgrading scala version to 2.12 including dependency version increments and a few code changes to get the build to pass.

--- a/csv-validator-java-api/pom.xml
+++ b/csv-validator-java-api/pom.xml
@@ -128,7 +128,7 @@
             <artifactId>scalaz-core_${scala.version}</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.scala-incubator.io</groupId>
+            <groupId>com.madgag</groupId>
             <artifactId>scala-io-file_${scala.version}</artifactId>
         </dependency>
         <dependency>
