--- a/csv-validator-cmd/pom.xml
+++ b/csv-validator-cmd/pom.xml
@@ -21,6 +21,10 @@
       <tag>HEAD</tag>
   </scm>
 
+    <properties>
+        <scopt.version>3.7.0</scopt.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -115,18 +119,18 @@
         <dependency>
             <groupId>com.github.scopt</groupId>
             <artifactId>scopt_${scala.version}</artifactId>
-            <version>3.3.0</version>
+            <version>${scopt.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scalaz</groupId>
             <artifactId>scalaz-core_${scala.version}</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.madgag</groupId>
+            <groupId>com.jsuereth</groupId>
             <artifactId>scala-arm_${scala.version}</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.scala-incubator.io</groupId>
+            <groupId>com.madgag</groupId>
             <artifactId>scala-io-file_${scala.version}</artifactId>
         </dependency>
         <dependency>
