--- a/csv-validator-core/pom.xml
+++ b/csv-validator-core/pom.xml
@@ -21,6 +21,13 @@
       <tag>HEAD</tag>
   </scm>
 
+    <properties>
+        <scala-parser-combinators.version>1.0.6</scala-parser-combinators.version>
+        <scalaz-stream.version>0.8.6</scalaz-stream.version>
+        <scodec-bits.version>1.1.5</scodec-bits.version>
+        <gfc-semver.version>0.0.5</gfc-semver.version>
+    </properties>
+
     <build>
 
         <plugins>
@@ -96,7 +103,7 @@
         <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-parser-combinators_${scala.version}</artifactId>
-            <version>1.0.3</version>
+            <version>${scala-parser-combinators.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scalaz</groupId>
@@ -105,12 +112,12 @@
         <dependency>
             <groupId>org.scalaz.stream</groupId>
             <artifactId>scalaz-stream_${scala.version}</artifactId>
-            <version>0.7.3a</version>
+            <version>${scalaz-stream.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scodec</groupId>
             <artifactId>scodec-bits_${scala.version}</artifactId>
-            <version>1.0.6</version>
+            <version>${scodec-bits.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scalaz</groupId>
@@ -118,15 +125,15 @@
             <version>${scalaz.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.scala-incubator.io</groupId>
+            <groupId>com.madgag</groupId>
             <artifactId>scala-io-file_${scala.version}</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.scala-incubator.io</groupId>
+            <groupId>com.madgag</groupId>
             <artifactId>scala-io-core_${scala.version}</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.madgag</groupId>
+            <groupId>com.jsuereth</groupId>
             <artifactId>scala-arm_${scala.version}</artifactId>
         </dependency>
         <dependency>
@@ -142,7 +149,7 @@
         <dependency>
             <groupId>com.gilt</groupId>
             <artifactId>gfc-semver_${scala.version}</artifactId>
-            <version>0.1.0</version>
+            <version>${gfc-semver.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.gov.nationalarchives</groupId>
