--- a/csv-validator-parent/pom.xml
+++ b/csv-validator-parent/pom.xml
@@ -81,10 +81,12 @@
   </scm>
 
     <properties>
-        <scala.version>2.11</scala.version>
-        <scala.lib.version>2.11.7</scala.lib.version>
-        <scalaz.version>7.2.0</scalaz.version>
-        <specs2.version>3.7.1</specs2.version>
+        <scala.version>2.12</scala.version>
+        <scala.lib.version>${scala.version}.3</scala.lib.version>
+        <scalaz.version>7.2.15</scalaz.version>
+        <specs2.version>3.9.5</specs2.version>
+        <scala-io.version>0.4.9</scala-io.version>
+        <scala-arm.version>2.0</scala-arm.version>
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <contact.email>digitalpreservation@nationalarchives.gov.uk</contact.email>
@@ -342,19 +344,19 @@
                 <version>${scalaz.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.scala-incubator.io</groupId>
+                <groupId>com.madgag</groupId>
                 <artifactId>scala-io-file_${scala.version}</artifactId>
-                <version>0.4.3-1</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.scala-incubator.io</groupId>
-                <artifactId>scala-io-core_${scala.version}</artifactId>
-                <version>0.4.3-1</version>
+                <version>${scala-io.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.madgag</groupId>
+                <artifactId>scala-io-core_${scala.version}</artifactId>
+                <version>${scala-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jsuereth</groupId>
                 <artifactId>scala-arm_${scala.version}</artifactId>
-                <version>1.3.4</version>
+                <version>${scala-arm.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.specs2</groupId>
