--- a/csv-validator-ui/pom.xml
+++ b/csv-validator-ui/pom.xml
@@ -21,6 +21,10 @@
       <tag>HEAD</tag>
   </scm>
 
+    <properties>
+        <scala-swing.version>2.0.0</scala-swing.version>
+    </properties>
+
     <build>
 
         <plugins>
@@ -106,14 +110,14 @@
         <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-swing_${scala.version}</artifactId>
-            <version>2.0.0-M2</version>
+            <version>${scala-swing.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.madgag</groupId>
+            <groupId>com.jsuereth</groupId>
             <artifactId>scala-arm_${scala.version}</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.scala-incubator.io</groupId>
+            <groupId>com.madgag</groupId>
             <artifactId>scala-io-file_${scala.version}</artifactId>
             <exclusions>
                 <exclusion>
